objects/Unit_Test_Failure__c.object
<CustomObject>
    <description>Represents failed unit test methods from a test run</description>
    <fields>
        <fullName>Apex_Log_Id__c</fullName>
        <externalId>true</externalId>
        <label>Apex Log Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <description>The class that this method is a member of</description>
        <inlineHelpText>The class that this method is a member of</inlineHelpText>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>The error message from the test failure</description>
        <inlineHelpText>The error message from the test failure</inlineHelpText>
        <label>Message</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Method_Name__c</fullName>
        <description>The name of the test method that failed</description>
        <label>Method Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Run_Time__c</fullName>
        <label>Run Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unit_Test_Summary__c</fullName>
        <description>The summary record that this test error result is a part of.</description>
        <label>Unit Test Summary</label>
        <referenceTo>Unit_Test_Summary__c</referenceTo>
        <relationshipLabel>Unit Test Failures</relationshipLabel>
        <relationshipName>Unit_Test_Failures</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Unit Test Failure</label>
    <nameField>
        <displayFormat>UT-{00000}</displayFormat>
        <label>Failed Unit Test Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unit Test Failures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>